objects/hed__Education_History__c.object
<CustomObject>
    <description>Stores information about a Contact&apos;s education history and related data.</description>
    <label>Education History</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__GPA__c</fullName>
        <description>The Contact&apos;s final grade point average.</description>
        <inlineHelpText>The Contact&apos;s final grade point average.</inlineHelpText>
        <label>GPA</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>The status of the Education History. For example, Enrolled or Completed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Educational Institution Account related to this data.</description>
        <label>Educational Institution Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact related to this historical data.</description>
        <inlineHelpText>The Contact related to this historical data.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Details__c</fullName>
        <description>Additional details about this student&apos;s educational history.</description>
        <inlineHelpText>Additional details about this student&apos;s educational history.</inlineHelpText>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date the Contact left this Educational Institution.</description>
        <inlineHelpText>The date the Contact left this Educational Institution.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Class_Rank__c</fullName>
        <description>The student&apos;s academic rank in relation to their graduating class. For example, a student that ranks 5th in the class of 200, has a value of 5.</description>
        <inlineHelpText>The student&apos;s academic rank in relation to their graduating class. For example, a student that ranks 5th in the class of 200, has a value of 5.</inlineHelpText>
        <label>Class Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Class_Size__c</fullName>
        <description>The number of students that were in the Contact&apos;s class.</description>
        <inlineHelpText>The number of students that were in the Contact&apos;s class.</inlineHelpText>
        <label>Class Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date the Contact started at this Educational Institution.</description>
        <inlineHelpText>The date the Contact started at this Educational Institution.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Degree_Earned__c</fullName>
        <description>If applicable, the level of the degree the Contact earned at this Educational Institution.</description>
        <inlineHelpText>If applicable, the level of the degree the Contact earned at this Educational Institution.</inlineHelpText>
        <label>Degree Earned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>High School Diploma</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>JD</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <description>The number of credits earned.</description>
        <inlineHelpText>The number of credits earned.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__GPA_Scale_Type__c</fullName>
        <description>Tracks how the GPA was determined. For example, using a weighted or unweighted scale.</description>
        <inlineHelpText>Tracks how the GPA was determined. For example, using a weighted or unweighted scale.</inlineHelpText>
        <label>GPA Scale Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unweighted</fullName>
                </value>
                <value>
                    <fullName>Weighted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Class_Rank_Type__c</fullName>
        <description>Tracks how the Class Rank was determined. For example, using a weighted or unweighted scale.</description>
        <inlineHelpText>Tracks how the Class Rank was determined. For example, using a weighted or unweighted scale.</inlineHelpText>
        <label>Class Rank Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unweighted</fullName>
                </value>
                <value>
                    <fullName>Weighted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Graduation_Date__c</fullName>
        <description>If applicable, the date the Contact graduated from this Educational Institution.</description>
        <inlineHelpText>If applicable, the date the Contact graduated from this Educational Institution.</inlineHelpText>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Class_Percentile__c</fullName>
        <description>The student&apos;s percentile ranking for their class. For example, a student that ranks in the top 10% has a 90% value.</description>
        <inlineHelpText>The student&apos;s percentile ranking for their class. For example, a student that ranks in the top 10% has a 90% value.</inlineHelpText>
        <label>Class Percentile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>hed__Class_Rank_Scale__c</fullName>
        <description>Tracks how the Class Percentile was determined. For example, using exact decile, quintile, or quartile.</description>
        <inlineHelpText>Tracks how the Class Percentile was determined. For example, using exact decile, quintile, or quartile.</inlineHelpText>
        <label>Class Rank Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Decile</fullName>
                </value>
                <value>
                    <fullName>Quintile</fullName>
                </value>
                <value>
                    <fullName>Quartile</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__GPA_Scale_Reporting__c</fullName>
        <description>The highest possible grade point average at this Educational Institution.</description>
        <inlineHelpText>The highest possible grade point average at this Educational Institution.</inlineHelpText>
        <label>GPA Scale Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Verification_Status__c</fullName>
        <description>Indicates the verification status of a credential.</description>
        <inlineHelpText>Indicates the verification status of a credential.</inlineHelpText>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Academic_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Academic Certification that this Education History applies to, such as a Degree.</description>
        <inlineHelpText>The Academic Certification that this Education History applies to, such as a Degree.</inlineHelpText>
        <label>Academic Certification</label>
        <referenceTo>hed__Academic_Certification__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Education_History_JSON__c</fullName>
        <description>A system field that stores a large JSON structure used for integrations. Do not modify this field.</description>
        <label>Education History JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Verification_Status_Date__c</fullName>
        <description>The most recent date Verification Status changed.</description>
        <inlineHelpText>The most recent date Verification Status changed.</inlineHelpText>
        <label>Verification Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Educational_Institution_Name__c</fullName>
        <description>The name of the Educational Institution related to this data.</description>
        <label>Educational Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>